paas/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paas-frontend
  namespace: devsecops-paas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paas-frontend
  template:
    metadata:
      labels:
        app: paas-frontend
    spec:
      containers:
        - name: nextjs
          image: harbor.local/paas/paas-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
