paas/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paas-frontend
  namespace: devsecops-paas
spec:
  selector:
    app: paas-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
