paas/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-frontend
  namespace: devsecops-paas
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: paas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paas-frontend
                port:
                  number: 80
