paas/k8s-manifests/opa-require-cosign-annotation.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredannotations
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredAnnotations
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredannotations

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          not input.review.object.metadata.annotations["cosign.sig"]
          msg := "Pod must contain annotation 'cosign.sig' with signature metadata"
        }

---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: require-cosign-annotation
spec:
  match:
    kinds:
      - apiGroups: ["" ]
        kinds: ["Pod"]
  parameters: {}
